--- a/repdata-005_Project_2.html
+++ b/repdata-005_Project_2.html
@@ -56,17 +56,17 @@ if (window.hljs && document.readyState && document.readyState === "complete") {
 </div>
 
 
-<p>We load the <code>dplyr</code> package for data manipulation and the <code>ggplot2</code> package for graphing.</p>
-<pre class="r"><code>library(&quot;dplyr&quot;)
-library(&quot;ggplot2&quot;)</code></pre>
 <div id="synopsis" class="section level2">
 <h2>Synopsis</h2>
 <p>[at most 10 sentences]</p>
 </div>
 <div id="data-processing" class="section level2">
 <h2>Data Processing</h2>
-<p>Despite being a compressed file, <code>read.csv</code> has no trouble parsing it.</p>
-<pre class="r"><code>storm_data &lt;- read.csv(&quot;repdata-data-StormData.csv.bz2&quot;)</code></pre>
+<p>We load the <code>dplyr</code> package for data manipulation and the <code>ggplot2</code> package for graphing.</p>
+<pre class="r"><code>library(&quot;dplyr&quot;)
+library(&quot;ggplot2&quot;)</code></pre>
+<p>Despite being a compressed file, <code>read.csv</code> has no trouble parsing the data file.</p>
+<pre class="r"><code>storm_data_raw &lt;- read.csv(&quot;repdata-data-StormData.csv.bz2&quot;, stringsAsFactors = FALSE)</code></pre>
 <p>We will <code>select</code> only the columns that pertain to our questions:</p>
 <ul>
 <li><code>EVTYPE</code>: the event type,</li>
@@ -78,7 +78,7 @@ library(&quot;ggplot2&quot;)</code></pre>
 <li><code>CROPDMGEXP</code>: a “multiplier” extension for the amount in <code>CROPDMG</code>,</li>
 <li><code>REMARKS</code>: remarks added by the person recording the data.</li>
 </ul>
-<pre class="r"><code>storm_data2 &lt;- storm_data %&gt;%
+<pre class="r"><code>storm_data &lt;- storm_data_raw %&gt;%
     select(EVTYPE, FATALITIES, INJURIES, PROPDMG, PROPDMGEXP,
            CROPDMG, CROPDMGEXP, REMARKS)</code></pre>
 <p>In the instructions for storm data preparation (located <a href="https://d396qusza40orc.cloudfront.net/repdata%2Fpeer2_doc%2Fpd01016005curr.pdf">here</a>), we read,</p>
@@ -87,16 +87,18 @@ library(&quot;ggplot2&quot;)</code></pre>
 </blockquote>
 <p>Therefore, to get accurate damage estimates, we need to multiply our damages by the appropriate factor.</p>
 <p>The bad news is that there is some messiness in the variables <code>PROPDMGEXP</code> and <code>CROPDMGEXP</code>.</p>
-<pre class="r"><code>summary(storm_data2$PROPDMGEXP)</code></pre>
-<pre><code>##             -      ?      +      0      1      2      3      4      5 
+<pre class="r"><code>table(storm_data$PROPDMGEXP)</code></pre>
+<pre><code>## 
+##             -      ?      +      0      1      2      3      4      5 
 ## 465934      1      8      5    216     25     13      4      4     28 
 ##      6      7      8      B      h      H      K      m      M 
 ##      4      5      1     40      1      6 424665      7  11330</code></pre>
-<pre class="r"><code>summary(storm_data2$CROPDMGEXP)</code></pre>
-<pre><code>##             ?      0      2      B      k      K      m      M 
+<pre class="r"><code>table(storm_data$CROPDMGEXP)</code></pre>
+<pre><code>## 
+##             ?      0      2      B      k      K      m      M 
 ## 618413      7     19      1      9     21 281832      1   1994</code></pre>
-<p>The good news is that there aren’t many too many cases that have strange entries in this field. One possibiility is that the numerical digits may have been recorded by people assuming that this field was for the power of ten required (i.e., <span class="math">\(3000 = 3.00 \times 10^{3}\)</span>). This would be especially problematic for our analysis for large powers of 10, indicating dollar figures possibly in the millions or more. We examine these specific entries for clues:</p>
-<pre class="r"><code>storm_data2 %&gt;%
+<p>The good news is that there aren’t many too many cases that have strange entries in this field. One possibiility is that the numerical digits may have been recorded by people assuming that this field was for the power of ten required for scientific notation (i.e., <span class="math">\(3000 = 3.00 \times 10^{3}\)</span>). This would be especially problematic for our analysis for large powers of 10, indicating dollar figures possibly in the millions or more. We examine these specific entries for clues:</p>
+<pre class="r"><code>storm_data %&gt;%
     filter(PROPDMGEXP %in% 5:8) %&gt;%
     select(EVTYPE, PROPDMG, PROPDMGEXP, REMARKS) %&gt;%
     arrange(PROPDMGEXP)</code></pre>
@@ -179,10 +181,263 @@ library(&quot;ggplot2&quot;)</code></pre>
 ## 37                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                             A home was destroyed by a fire started by lightning. 
 ## 38                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                         Several homes and several hundered vehicle were damaged.</code></pre>
 <p>To begin with, the multipliers will make no difference to a bunch of entries where the damage in <code>PROPDMG</code> is recorded as 0.0, even though it is clear in most of the accompanying remarks that there was, indeed, damage. But even for those cases with nonzero figures, the remarks are not easy to reconcile to the figures. For example, the entry labeled <code>## 2</code> in the output above mentions several destroyed buildings including a home valued at $250,000 to $300,000. However, the propery damage is recorded as PROPDMG = 1.7 and PROPDMGEXP = 5. Note that <span class="math">\(1.7 \times 10^5\)</span> is 170,000, nowhere near high enough. Similar problems exist in trying to reconcile most of the other damage figures above with remarks that seem off by orders of magnitude.</p>
-<p>Given the small number of cases involved here, it seems best to ignore the mysterious entries and focus on the cases with “k”, “K”, “m”, “M”, and “B”.</p>
+<p>Given the relatively small number of cases involved here, it seems best to ignore the mysterious entries and focus on the cases with “k”, “K”, “m”, “M”, and “B”. (Anything else will get assigned to 1 so that the multiplier causes no change in the value.) We will do this with <code>PROPDMG</code> and <code>CROPDMG</code>.</p>
+<pre class="r"><code>PROPDMGEXP_value &lt;- sapply(storm_data$PROPDMGEXP,
+    function(x) {switch(x,  &quot;k&quot; = 1000, &quot;K&quot; = 1000,
+                            &quot;m&quot; = 1000000, &quot;M&quot; = 1000000, 
+                            &quot;B&quot; = 1000000000, 1)})
+
+CROPDMGEXP_value &lt;- sapply(storm_data$CROPDMGEXP,
+    function(x) {switch(x,  &quot;k&quot; = 1000, &quot;K&quot; = 1000,
+                            &quot;m&quot; = 1000000, &quot;M&quot; = 1000000, 
+                            &quot;B&quot; = 1000000000, 1)})
+storm_data &lt;- storm_data %&gt;%
+    mutate(PROPDMG_value = PROPDMGEXP_value,
+           CROPDMG_value = CROPDMGEXP_value,
+           PROPDMG_actual = PROPDMG * PROPDMG_value,
+           CROPDMG_actual = CROPDMG * CROPDMG_value)</code></pre>
 </div>
 <div id="results" class="section level2">
 <h2>Results</h2>
+<div id="across-the-united-states-which-types-of-events-as-indicated-in-the-evtype-variable-are-most-harmful-with-respect-to-population-health" class="section level3">
+<h3>1. Across the United States, which types of events (as indicated in the <code>EVTYPE</code> variable) are most harmful with respect to population health?</h3>
+<p>First, we get the totals for all the quantities of interest.</p>
+<pre class="r"><code>storm_impact &lt;- storm_data %&gt;%
+    group_by(EVTYPE) %&gt;%
+    summarize(fatalities = sum(FATALITIES), injuries = sum(INJURIES),
+              property_damage = sum(PROPDMG_actual),
+              crop_damage = sum(CROPDMG_actual))</code></pre>
+<p>Simple tables suffice here. We look at the top 10 events that cause the most fatalities and injuries respectively.</p>
+<pre class="r"><code>storm_impact %&gt;%
+    select(EVTYPE, fatalities) %&gt;%
+    arrange(desc(fatalities)) %&gt;%
+    head(10) %&gt;%
+    format(big.mark = &quot;,&quot;) %&gt;%
+    knitr::kable(&quot;markdown&quot;, align = c('l', 'r'))</code></pre>
+<table>
+<thead>
+<tr class="header">
+<th align="left">EVTYPE</th>
+<th align="right">fatalities</th>
+</tr>
+</thead>
+<tbody>
+<tr class="odd">
+<td align="left">TORNADO</td>
+<td align="right">5,633</td>
+</tr>
+<tr class="even">
+<td align="left">EXCESSIVE HEAT</td>
+<td align="right">1,903</td>
+</tr>
+<tr class="odd">
+<td align="left">FLASH FLOOD</td>
+<td align="right">978</td>
+</tr>
+<tr class="even">
+<td align="left">HEAT</td>
+<td align="right">937</td>
+</tr>
+<tr class="odd">
+<td align="left">LIGHTNING</td>
+<td align="right">816</td>
+</tr>
+<tr class="even">
+<td align="left">TSTM WIND</td>
+<td align="right">504</td>
+</tr>
+<tr class="odd">
+<td align="left">FLOOD</td>
+<td align="right">470</td>
+</tr>
+<tr class="even">
+<td align="left">RIP CURRENT</td>
+<td align="right">368</td>
+</tr>
+<tr class="odd">
+<td align="left">HIGH WIND</td>
+<td align="right">248</td>
+</tr>
+<tr class="even">
+<td align="left">AVALANCHE</td>
+<td align="right">224</td>
+</tr>
+</tbody>
+</table>
+<pre class="r"><code>storm_impact %&gt;%
+    select(EVTYPE, injuries) %&gt;%
+    arrange(desc(injuries)) %&gt;%
+    head(10) %&gt;%
+    format(big.mark = &quot;,&quot;) %&gt;%
+    knitr::kable(&quot;markdown&quot;, align = c('l', 'r'))</code></pre>
+<table>
+<thead>
+<tr class="header">
+<th align="left">EVTYPE</th>
+<th align="right">injuries</th>
+</tr>
+</thead>
+<tbody>
+<tr class="odd">
+<td align="left">TORNADO</td>
+<td align="right">91,346</td>
+</tr>
+<tr class="even">
+<td align="left">TSTM WIND</td>
+<td align="right">6,957</td>
+</tr>
+<tr class="odd">
+<td align="left">FLOOD</td>
+<td align="right">6,789</td>
+</tr>
+<tr class="even">
+<td align="left">EXCESSIVE HEAT</td>
+<td align="right">6,525</td>
+</tr>
+<tr class="odd">
+<td align="left">LIGHTNING</td>
+<td align="right">5,230</td>
+</tr>
+<tr class="even">
+<td align="left">HEAT</td>
+<td align="right">2,100</td>
+</tr>
+<tr class="odd">
+<td align="left">ICE STORM</td>
+<td align="right">1,975</td>
+</tr>
+<tr class="even">
+<td align="left">FLASH FLOOD</td>
+<td align="right">1,777</td>
+</tr>
+<tr class="odd">
+<td align="left">THUNDERSTORM WIND</td>
+<td align="right">1,488</td>
+</tr>
+<tr class="even">
+<td align="left">HAIL</td>
+<td align="right">1,361</td>
+</tr>
+</tbody>
+</table>
+</div>
+<div id="across-the-united-states-which-types-of-events-have-the-greatest-economic-consequences" class="section level3">
+<h3>2. Across the United States, which types of events have the greatest economic consequences?</h3>
+<p>We look at similar tables for property damage and crop damage (in dollars) to assess economic impact.</p>
+<pre class="r"><code>options(scipen = 10)
+storm_impact %&gt;%
+    select(EVTYPE, property_damage) %&gt;%
+    arrange(desc(property_damage)) %&gt;%
+    head(10) %&gt;%
+    format(big.mark = &quot;,&quot;) %&gt;%
+    knitr::kable(&quot;markdown&quot;, align = c('l', 'r'))</code></pre>
+<table>
+<thead>
+<tr class="header">
+<th align="left">EVTYPE</th>
+<th align="right">property_damage</th>
+</tr>
+</thead>
+<tbody>
+<tr class="odd">
+<td align="left">FLOOD</td>
+<td align="right">144,657,709,807</td>
+</tr>
+<tr class="even">
+<td align="left">HURRICANE/TYPHOON</td>
+<td align="right">69,305,840,000</td>
+</tr>
+<tr class="odd">
+<td align="left">TORNADO</td>
+<td align="right">56,937,160,779</td>
+</tr>
+<tr class="even">
+<td align="left">STORM SURGE</td>
+<td align="right">43,323,536,000</td>
+</tr>
+<tr class="odd">
+<td align="left">FLASH FLOOD</td>
+<td align="right">16,140,812,067</td>
+</tr>
+<tr class="even">
+<td align="left">HAIL</td>
+<td align="right">15,732,267,048</td>
+</tr>
+<tr class="odd">
+<td align="left">HURRICANE</td>
+<td align="right">11,868,319,010</td>
+</tr>
+<tr class="even">
+<td align="left">TROPICAL STORM</td>
+<td align="right">7,703,890,550</td>
+</tr>
+<tr class="odd">
+<td align="left">WINTER STORM</td>
+<td align="right">6,688,497,251</td>
+</tr>
+<tr class="even">
+<td align="left">HIGH WIND</td>
+<td align="right">5,270,046,295</td>
+</tr>
+</tbody>
+</table>
+<pre class="r"><code>storm_impact %&gt;%
+    select(EVTYPE, crop_damage) %&gt;%
+    arrange(desc(crop_damage)) %&gt;%
+    head(10) %&gt;%
+    format(big.mark = &quot;,&quot;) %&gt;%
+    knitr::kable(&quot;markdown&quot;, align = c('l', 'r'))</code></pre>
+<table>
+<thead>
+<tr class="header">
+<th align="left">EVTYPE</th>
+<th align="right">crop_damage</th>
+</tr>
+</thead>
+<tbody>
+<tr class="odd">
+<td align="left">DROUGHT</td>
+<td align="right">13,972,566,000</td>
+</tr>
+<tr class="even">
+<td align="left">FLOOD</td>
+<td align="right">5,661,968,450</td>
+</tr>
+<tr class="odd">
+<td align="left">RIVER FLOOD</td>
+<td align="right">5,029,459,000</td>
+</tr>
+<tr class="even">
+<td align="left">ICE STORM</td>
+<td align="right">5,022,113,500</td>
+</tr>
+<tr class="odd">
+<td align="left">HAIL</td>
+<td align="right">3,025,954,473</td>
+</tr>
+<tr class="even">
+<td align="left">HURRICANE</td>
+<td align="right">2,741,910,000</td>
+</tr>
+<tr class="odd">
+<td align="left">HURRICANE/TYPHOON</td>
+<td align="right">2,607,872,800</td>
+</tr>
+<tr class="even">
+<td align="left">FLASH FLOOD</td>
+<td align="right">1,421,317,100</td>
+</tr>
+<tr class="odd">
+<td align="left">EXTREME COLD</td>
+<td align="right">1,292,973,000</td>
+</tr>
+<tr class="even">
+<td align="left">FROST/FREEZE</td>
+<td align="right">1,094,086,000</td>
+</tr>
+</tbody>
+</table>
+</div>
 </div>
 
 
